k8s/base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tiro-speech-core-deployment
  labels:
    app: tiro-speech-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiro-speech-core
  template:
    metadata:
      labels:
        app: tiro-speech-core
    spec:
      containers:
      - name: speech-server
        image: tiro-speech-server
        imagePullPolicy: Always
        args:
        - --log-level=INFO
        - --kaldi-models=/models/is-IS
        - --listen-address=0.0.0.0:50051
        ports:
        - containerPort: 50051
          protocol: TCP
        volumeMounts:
        - mountPath: /models
          name: models
          readOnly: true
        resources:
          requests:
            memory: "2600Mi"
            cpu: "1000m"
      - name: restproxy
        image: tiro-speech-rest-gateway
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        args:
        - -endpoint=localhost:50051
        - -logtostderr
        - -v=2
      volumes:
      - name: models
        emptyDir: {}
