k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiro-speech-core-svc
spec:
  selector:
    app: tiro-speech-core
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  - name: rest
    port: 8080
    targetPort: 8080
