k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tiro-speech-core-h2c-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/protocol: https
spec:
  rules:
  - host: speech.tiro.is
    http:
      paths:
      - path: /
        backend:
          serviceName: tiro-speech-core-svc
          servicePort: grpcwebproxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tiro-speech-core-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: speech.tiro.is
    http:
      paths:
      - path: /v1alpha/
        backend:
          serviceName: tiro-speech-core-svc
          servicePort: rest
      - path: /openapiv2
        backend:
          serviceName: tiro-speech-core-svc
          servicePort: rest
      - path: /healthz
        backend:
          serviceName: tiro-speech-core-svc
          servicePort: rest
